--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.30.0",
     "react-use": "^17.6.0",
     "tailwindcss": "^4.0.3",
     "use-debounce": "^10.0.4"
